# squirrel

./: .editorconfig  .gitignore  Cargo.toml  README.md  index.html  inspector.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
crates/nut/: Cargo.toml
crates/nut-lock/: Cargo.toml
crates/nut-lock/src/: lib.rs
crates/nut/src/: config.rs  functions.rs  lib.rs  main.rs
crates/nut/src/entities/: asset.rs  catalogue.rs  connector.rs  entry.rs  event.rs  import.rs  location.rs  mod.rs  pyramid.rs  state.rs  stem.rs  storage.rs
crates/nut/src/pyramid/: header.rs  mod.rs  parser.rs
crates/nut/src/repositories/: asset.rs  catalogue.rs  entry.rs  event.rs  import.rs  mod.rs  preferences.rs  root.rs  source.rs  state.rs  stem.rs
crates/nut/src/services/: configurator.rs  importer.rs  inspector.rs  mod.rs  navigator.rs  starter.rs
crates/nut/src/storage/: catalogue.sql  import.sql  preferences.sql
src/: App.css  App.tsx  config.rs  history.ts  inspector_main.tsx  lib.rs  main.rs  main.tsx  palette.scss  prelude.scss  source.rs  state.ts  theme.ts  world.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: catalogue_commands.rs  image_protocol.rs  inspector_commands.rs  main.rs  preferences_commands.rs
src/aux/: image.ts  route.ts  useIntersection.ts  useMousePosition.ts
src/catalogue/: AssetsPane.tsx  Browser.module.scss  Browser.tsx  BrowserFocus.tsx  Catalogue.module.scss  CatalogueContext.tsx  CatalogueScreen.tsx  ExpandToggle.tsx  ImagePane.tsx  ThumbPane.tsx  TreePane.tsx  types.ts  value.ts
src/components/: Browser.tsx  BrowserFocus.tsx  CatalogueScreen.tsx  ExpandToggle.tsx  FilePane.tsx  FolderPane.tsx  LocatorBar.tsx  LocatorButtonBar.tsx  StartScreen.tsx  ThumbPane.tsx
src/entities/: catalogue.rs  entry.rs  event.rs  import.rs  mod.rs  root.rs  source.rs  state.rs  stem.rs  storage.rs
src/icons/: Circle.tsx  Download.tsx  Flag.tsx  Flame.tsx  Folder.tsx  Fullscreen.tsx  Heart.tsx  Minimise.tsx  Minus.tsx  Plus.tsx  Star.tsx
src/inspector/: Filter.tsx  Inspector.module.scss  InspectorContext.tsx  InspectorScreen.tsx  Table.tsx
src/navigator/: NavigatorContext.tsx
src/preferences/: ConnectorsSection.tsx  ConnectorsSectionContext.tsx  GeneralSection.tsx  GeneralSectionContext.tsx  Preferences.module.scss  PreferencesContext.tsx  PreferencesScreen.tsx  SourcesSection.tsx
src/pyramid/: header.rs  mod.rs  parser.rs
src/repositories/: asset.rs  catalogue.rs  event.rs  import.rs  mod.rs  source.rs  state.rs
src/services/: importer.rs  mod.rs  navigator.rs  starter.rs
src/storage/: analytics.sql  catalogue.sql  para.sql
