[package]
name = "squirrel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
# async-std = "1.10.0"
byteorder = "1.4.3"
chrono = "0.4.19"
combine = "4.6.3"
# futures = "0.3.19"
image = "0.24.0"
# kamadak-exif = "0.5.4"
thiserror = "1.0.30"
toml = "0.5.8"
walkdir = "2.3.2"


[target.x86_64-unknown-linux-musl]
linker = "x86_64-linux-musl-gcc"
