[package]
name = "squirrel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
byteorder = "1.4.3"
chrono = "0.4.19"
combine = "4.6.3"
image = "0.24.0"
r2d2 = "0.8.9"
r2d2_sqlite = "0.19.0"
rusqlite = { version = "0.26", features = ["bundled"] }
thiserror = "1.0.30"
toml = "0.5.8"
walkdir = "2.3.2"


[target.x86_64-unknown-linux-musl]
linker = "x86_64-linux-musl-gcc"
