[package]
name = "nut"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
byteorder = "1.4"
chrono = { version = "0.4", features = ["serde"] }
combine = "4.6"
directories = "4.0"
image = "0.24"
lazy_static = "1.4"
r2d2 = "0.8"
r2d2_sqlite = "0.20"
rusqlite = { version = "0.27", features = [
  "bundled",
  "functions",
  "serde_json",
  "chrono",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
toml = "0.5"
walkdir = "2.3"
